edited README.md, fixed BenchmarkUtils.java